Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignObjectTextObj.quorum
class Main
    action Main
        Text v
        v:SetValue("text")
        Test(v)
    end

    action Test(Object var)
        Text value = cast(Text, var)
        if value:GetValue() = "text"
            output "passed"
        end
    end
end
