Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjIntegerField.quorum
class main
    Text txt
    action Main
        txt = cast(Text, 5)
    end
end